v1.0.8
- Ability to set item properties from outside management dialog
- Ability for skin to specify it doesn't share menu's
- Ability to specify single/multi background browse options
- Ability to specify 'none' option for thumbnails
- New 'visibleoverride'
- Template improvements
- Minor fixes

v1.0.7
- Krypton support
- More accurately display build progress
- Additional properties available via window properties in management dialog
- Fix for add-on shortcut visibility conditions

v1.0.6
- Option not to share menus between skins; never hide PVR shortcuts
- Icons and thumbs are saved on a per-skin basis
- mtime of files is used to determine if they have changed
- New icon element for background overrides
- Support building variables in templates
- Add conditional custom property fallback override
- Add requires and templateOnly elements to properties
- Various language changes
- Speed improvements
- Minor fixes

v1.0.2
- Fix for music addon shortcuts on Isengard
- New artwork - thanks schimi2k
- Template improvements
- Management dialog improvements
- Minor fixes

v1.0.0
- Enable 'Get More...' installation of widget providers
- Return to using json to enable/disable Kodi debug logging
- Jarvis shortcut changes
- Load skin-playlists from subdirectories
- Ability to set custom property fallback value
- Cleanup
- Minor fixes

v0.6.6
- Template improvements
- Widget selection improvements
- Custom property selection improvements
- Fix properties being applied to wrong profile
- Just Select Widget method
- [aqab0N] Unicode fix
- Ability to restore deleted shortcut via 308
- Global override adjustments
- Fix clonebackground/clonewidgets; add cloneproperties
- [tomer953] Remove requirement for ::ACTION:: in action override to be the only text in element
- [tomer953] Management dialog - Insert new menu in the current location instead of add them at the end