@@ -4,6 +4,7 @@ v1.0.8
 - Ability to specify single/multi background browse options
 - Ability to specify 'none' option for thumbnails
 - New 'visibleoverride'
+- New 'noGroups' build option
 - Template improvements
 - Minor fixes
 
